--- a/report.html
+++ b/report.html
@@ -60,7 +60,8 @@
                       </div>
 
                       <label for="items">Choose a Category:</label>
-                      <select name="item" form="itemform">
+                      <select name="category" required>
+                        <option value="" disabled selected>Select Category</option>
                         <option value="Clothes">Clothes</option>
                         <option value="Accessories">Accessories</option>
                         <option value="Water Bottle">Water Bottle</option>
