--- a/claim-inquiry.html
+++ b/claim-inquiry.html
@@ -65,8 +65,8 @@
                         <input type="email" class="form-control" name="email" placeholder="@john.doe@gmail.com">
                       </div>
 
-                      <label for="request">Request Type:</label>
-                      <select name="request" id="request" name="type" form="request">
+                      <select name="requestType" required>
+                        <option value="" disabled selected>Select Request Type</option>
                         <option value="claim">Claim</option>
                         <option value="Inquiry">Inquiry</option>
                       </select>
